# Vigil

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: api-endpoints.puml  component.puml  data-model.puml  module-dependency.puml  packet-pipeline.puml  system-context.puml
src/: lib.rs  main.rs
src/alert/: mod.rs
src/api/: mod.rs
src/capture/: mod.rs
src/detection/: mod.rs
src/enrichment/: mod.rs
src/flow/: mod.rs
src/models/: mod.rs
src/storage/: mod.rs
src/tui/: app.rs  mod.rs  state.rs  ui.rs
tests/: gen_demo_pcap.rs  integration.rs
