[package]
name = "vigil"
version = "0.1.0"
edition = "2024"
description = "A network intrusion detection system with LLM-powered alert enrichment"
license = "MIT"
repository = "https://github.com/branson/vigil"

[lib]
name = "vigil"
path = "src/lib.rs"

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
# Packet capture & protocol decoding
pcap    = "1.3"
pnet    = "0.35"

# Async runtime & HTTP API
tokio   = { version = "1", features = ["full"] }
axum    = "0.7"

# Persistence
sqlx    = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# LLM enrichment HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Shared utilities
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }
serde   = { version = "1",  features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros"] }
